--- a/src/layouts/styles/global.less
+++ b/src/layouts/styles/global.less
@@ -86,3 +86,20 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
   .normal(1200px);
   .large(1200px);
 }
+/*头部*/
+.is-index {
+  height: 350px
+}
+
+/*图片轮播*/
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 350px;
+  line-height: 350px;
+  background: #3f1a08;
+  overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+  color: #fff;
+}
