--- a/src/components/NavBar2/style/index.less
+++ b/src/components/NavBar2/style/index.less
@@ -1,5 +1,6 @@
 @import "~antd/lib/style/themes/default.less";
 @import "./searchbox.less";
+@import "./style.less";
 // navbar
 .navbar {
   z-index: 1030;
