--- a/src/layouts/styles/global.less
+++ b/src/layouts/styles/global.less
@@ -90,6 +90,12 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
 .is-index {
   height: 350px
 }
+.position-abs3{position: absolute;z-index: 9999}
+.position-abs2{position: absolute;z-index: 50}
+.position-abs1{position: absolute;}
+
+.position-rel{position: relative;}
+
 
 /*图片轮播*/
 .ant-carousel .slick-slide {
@@ -103,3 +109,8 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
 .ant-carousel .slick-slide h3 {
   color: #fff;
 }
+/**间隔参数*/
+.margin-left-10{margin-left:10}
+.margin-left-15{margin-left:15}
+.margin-left-40{margin-left:40}
+.margin-left-80{margin-left:80}
