--- a/src/layouts/styles/global.less
+++ b/src/layouts/styles/global.less
@@ -93,24 +93,12 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
 .position-abs3{position: absolute;z-index: 9999}
 .position-abs2{position: absolute;z-index: 50}
 .position-abs1{position: absolute;}
-
 .position-rel{position: relative;}
-
-
 /*图片轮播*/
-.ant-carousel .slick-slide {
-  text-align: center;
-  height: 350px;
-  line-height: 350px;
-  background: #3f1a08;
-  overflow: hidden;
-}
-
-.ant-carousel .slick-slide h3 {
-  color: #fff;
-}
+.ant-carousel .slick-slide {text-align: center;height: 350px;line-height: 350px;background: #3f1a08;overflow: hidden;}
+.ant-carousel .slick-slide h3 {color: #fff;}
 /**间隔参数*/
-.margin-left-10{margin-left:10}
-.margin-left-15{margin-left:15}
-.margin-left-40{margin-left:40}
-.margin-left-80{margin-left:80}
+.margin-left-10{margin-left:10px}
+.margin-left-15{margin-left:15px}
+.margin-left-40{margin-left:40px}
+.margin-left-80{margin-left:80px}
