--- a/src/layouts/styles/global.less
+++ b/src/layouts/styles/global.less
@@ -87,9 +87,9 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
   .large(1200px);
 }
 /*头部*/
-.is-index {
-  height: 350px
-}
+.is-index {height: 350px}
+.basic-layout.full-layout .router-page, .basic-layout.full-layout .router-page >.carousel-index-content {min-height: calc(100vh - 350px)}
+.carousel-index-content >.ant-layout{min-height: calc(100vh - 350px)!important}
 .position-abs3{position: absolute;z-index: 9999}
 .position-abs2{position: absolute;z-index: 50}
 .position-abs1{position: absolute;}
@@ -102,3 +102,6 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
 .margin-left-15{margin-left:15px}
 .margin-left-40{margin-left:40px}
 .margin-left-80{margin-left:80px}
+.space0{margin:0!important;padding:0!important}
+.padding-left-5{padding-left:5px}
+.padding-left-15{padding-left:10px}
