--- a/src/layouts/styles/global.less
+++ b/src/layouts/styles/global.less
@@ -103,5 +103,6 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
 .margin-left-40{margin-left:40px}
 .margin-left-80{margin-left:80px}
 .space0{margin:0!important;padding:0!important}
+.border0{border:0}
 .padding-left-5{padding-left:5px}
 .padding-left-15{padding-left:10px}
