--- a/src/components/User/style/index.less
+++ b/src/components/User/style/index.less
@@ -1,13 +1,18 @@
 .User-box {
   width: 100%;
   height: 100%;
+  padding:50px 50px 20px 50px;
   position: relative;
   text-align: center;
   .User-photo {
     .ant-avatar-icon {
-      width:45%;
-      height: 45%;
-      i {font-size:34px }
+      width:50px;
+      height:50px;
+      i {font-size:50px }
     }
+  }
+  .User-info{
+    height: 30px;line-height: 30px;color:#FF7F00;
+    .User-name {font-weight:400;letter-spacing:0.6px}
   }
 }
