--- a/src/components/List/style/index.less
+++ b/src/components/List/style/index.less
@@ -1,27 +1,20 @@
-.site-list-box {
-  color:white;
-  padding:15px 0;
-  ul {
-    li {
-      height:60px;
-      line-height:25px;
-      letter-spacing: .4px;
-      font-size:13px;
-      padding:5px 15px;
-      &:hover {
-        background-color:#ca4236;
-      }
-      .side-list-left {
-        width:85%;
-        float: left;
-      }
-      .side-list-righ {
-        float: left;
-        a,button{border:none;padding:0!important;height: 25px;line-height: 25px;
-          &:hover{ transform: scale(1.4); }
-        }
-      }
-      span{display: block;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
-    };
+.list-content {
+  padding:20px;
+  .list-assist{
+    display: flex;
+    align-items: center;
+  }
+  .list-show {
+    text-align: right;
+  }
+  .content-container{
+    padding:20px 0px;
+    .space0 {
+      margin:0px;
+      padding:0px;
+    }
+    .mgt15 {
+      margin-bottom: 16px
+    }
   }
 }
