--- a/src/components/User/style/index.less
+++ b/src/components/User/style/index.less
@@ -1,7 +1,6 @@
 .User-box {
   width: 100%;
-  height: 100%;
-  padding:50px 50px 20px 50px;
+  padding:50px 0;
   position: relative;
   text-align: center;
   .User-photo {
