--- a/src/components/NavBar2/style/style.less
+++ b/src/components/NavBar2/style/style.less
@@ -1,10 +1,13 @@
 .absHeader{height:50px;background:rgba(0,0,0,0);}
 .display-block {display:block}
 .weather-box {
-  padding:40px;
+  padding:5px;
   .weather-header {
     height:45px;
     line-height: 45px;
-    padding:0 15px
+    padding:0 15px;
+    .h1 {
+      margin:0 5px;
+    }
   }
 }
