--- a/src/components/NavBar2/style/style.less
+++ b/src/components/NavBar2/style/style.less
@@ -2,6 +2,8 @@
 .display-block {display:block}
 .weather-box {
   padding:5px;
+  width:30%;
+  float:left;
   .weather-header {
     height:45px;
     line-height: 45px;
