--- a/src/components/NavBar2/style/style.less
+++ b/src/components/NavBar2/style/style.less
@@ -12,4 +12,27 @@
       margin:0 5px;
     }
   }
+  .weather-data {
+    padding:10px;
+    .weather-today {
+      border-right:1px solid #d15146;
+      padding:10px 15px; 
+      text-align:center;
+      float: left;
+      .temperature{
+        width: 100%;
+        float: left;
+        font-size: 40px;
+        margin-top:5px;
+        padding-left:12px;
+        color:#d15146
+      }
+      .daytext  {
+        width: 100%;
+        float: left;
+        margin-top:5px;
+        color:white
+      }
+    }
+  }
 }
