--- a/src/components/NavBar2/style/style.less
+++ b/src/components/NavBar2/style/style.less
@@ -23,13 +23,18 @@
         width: 100%;
         float: left;
         font-size: 40px;
-        margin-top:5px;
+        // margin-top:5px;
         padding-left:12px;
         color:#d15146
       }
+      .interval {
+        line-height: 25px;
+        height: 25px;
+        margin:0 5px
+      }
       .daytext  {
-        width: 100%;
-        float: left;
+        // width: 100%;
+        //float: right;
         margin-top:5px;
         color:white
       }
