--- a/src/components/List/style/index.less
+++ b/src/components/List/style/index.less
@@ -14,7 +14,35 @@
       padding:0px;
     }
     .mgt15 {
-      margin-bottom: 16px
+      margin-bottom: 16px;
+      .ant-card-body {
+        padding:5px;
+        .ant-card-head {
+            min-height: 24px;
+            padding:0 10px;
+            font-size:13px;
+            font-weight: 400;
+            .ant-card-head-title {
+              padding:5px 0
+            }
+        };
+        .ant-card-body {
+          padding:25px;
+        }
+      }
+      .ant-card-actions {
+        li {
+          margin:5px 0;
+          span {
+            font-size:12px;
+            line-height: 16px;
+            .anticon {
+                font-size:12px;
+                line-height: 16px;
+            }
+          }
+        }
+      }
     }
   }
 }
