--- a/src/components/NavBar2/style/style.less
+++ b/src/components/NavBar2/style/style.less
@@ -1,10 +1,11 @@
 .absHeader{height:50px;background:rgba(0,0,0,0);}
 .display-block {display:block}
+.background-ghost  {background-color: rgba(0,0,0,0)!important}
 .index-header{
   position: relative;
   .weather-backgroud{
     position: absolute;
-    top:0;
+    top:75px;
     right: 0;
     width: 25%;
     background:rgba(255,255,255,0.8);
@@ -15,7 +16,7 @@
     width:25%;
     position: absolute;
     right: 0px;
-    top:0px;
+    top:75px;
     z-index:2;
     .weather-header {
       height:45px;
