--- a/src/layouts/styles/global.less
+++ b/src/layouts/styles/global.less
@@ -80,6 +80,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
 };
 .container{
   margin:0 auto;
+  background: rgba(255, 255, 255, 0);
   .smallest(100%);
   .smaller(100%);
   .small(950px);
@@ -87,15 +88,15 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', sans-se
   .large(1200px);
 }
 /*头部*/
-.is-index {height: 350px}
-.basic-layout.full-layout .router-page, .basic-layout.full-layout .router-page >.carousel-index-content {min-height: calc(100vh - 350px)}
-.carousel-index-content >.ant-layout{min-height: calc(100vh - 350px)!important}
-.position-abs3{position: absolute;z-index: 9999}
+.is-index {height: 420px}
+.basic-layout.full-layout .router-page, .basic-layout.full-layout .router-page >.carousel-index-content {min-height: calc(100vh - 420px)}
+.carousel-index-content >.ant-layout{min-height: calc(100vh - 420px)!important}
+.position-abs3{position: absolute;z-index: 9999;}
 .position-abs2{position: absolute;z-index: 50}
 .position-abs1{position: absolute;}
 .position-rel{position: relative;}
 /*图片轮播*/
-.ant-carousel .slick-slide {text-align: center;height: 350px;line-height: 350px;background: #3f1a08;overflow: hidden;}
+.ant-carousel .slick-slide {text-align: center;height: 420px;line-height: 420px;background: #3f1a08;overflow: hidden;}
 .ant-carousel .slick-slide h3 {color: #fff;}
 /**间隔参数*/
 .margin-left-10{margin-left:10px}
