--- a/src/routes/Index/Artical/components/index.less
+++ b/src/routes/Index/Artical/components/index.less
@@ -5,3 +5,10 @@
 .carousel-content-right{
 
 }
+.xltitle {
+  font-size: 38px;
+  color: #4D4F53;
+  line-height: 50px;
+  padding: 34px 0;
+  font-weight: 700;
+}
