--- a/src/routes/Index/Artical/components/index.less
+++ b/src/routes/Index/Artical/components/index.less
@@ -1,3 +1,9 @@
+.vh100{
+  height:100vh;
+}
+.mt10  {
+  margin-top:10px;
+}
 .carousel-content-left {
   background:#262626;
   min-height:calc(100vh - 350px) 
