--- a/src/routes/Admin/Artical/components/index.less
+++ b/src/routes/Admin/Artical/components/index.less
@@ -1,4 +1,9 @@
 .dashboard-page {
-  .antui-panel {
-  }
+    .footer {
+      display: flex;
+      padding:15px 5px;
+      .art_add {
+        margin-right: 15px;
+      }
+    }
 }
