--- a/src/components/ArticalList/style/index.less
+++ b/src/components/ArticalList/style/index.less
@@ -1,6 +1,6 @@
-.site-list-box {
+.site-list-box-home {
   color:white;
-  padding:15px 0;
+  padding:15px 0 15px 15px;
   ul {
     li {
       height:60px;
