--- a/src/components/ArticalList/style/index.less
+++ b/src/components/ArticalList/style/index.less
@@ -7,9 +7,10 @@
       line-height:25px;
       letter-spacing: .4px;
       font-size:13px;
-      padding:5px 15px;
+      padding:5px 0px 5px 15px;
       &:hover {
         background-color:#ca4236;
+        cursor:pointer
       }
       .side-list-left {
         width:75%;
