--- a/src/components/ArticalList/style/index.less
+++ b/src/components/ArticalList/style/index.less
@@ -6,15 +6,22 @@
       height:60px;
       line-height:25px;
       letter-spacing: .4px;
-      font-size:13px;
+      font-size:12px;
       padding:5px 0px 5px 15px;
       &:hover {
-        background-color:#ca4236;
+        background-color: #ca4236;
         cursor:pointer
       }
       .side-list-left {
-        width:75%;
+        width:90%;
         float: left;
+        border-bottom: 1px solid #7d8492;
+        a {
+          color: #d9d9d9;
+          &:hover{
+
+          }
+        }
       }
       .side-list-righ {
         float: left;
