--- a/src/components/List/style/index.less
+++ b/src/components/List/style/index.less
@@ -40,6 +40,7 @@
                 font-size:12px;
                 line-height: 16px;
             }
+            .show-view {margin-left:3px}
           }
         }
       }
