--- a/src/components/ArticalList/style/index.less
+++ b/src/components/ArticalList/style/index.less
@@ -2,7 +2,11 @@
   color:white;
   padding:15px 0 15px 15px;
   ul {
+    a{
+      color: aliceblue;
+    }
     li {
+      position: relative;
       height:60px;
       line-height:25px;
       letter-spacing: .4px;
@@ -18,9 +22,11 @@
         float: left;
         a {
           color: #d9d9d9;
-          &:hover{
-
-          }
+        }
+        .articalNotice {
+          position: absolute;
+          bottom: 5px;
+          right: 15px;
         }
       }
       .side-list-righ {
