--- a/src/components/AutoMenu/style/index.less
+++ b/src/components/AutoMenu/style/index.less
@@ -17,7 +17,7 @@ li {
 
 a {
     text-decoration: none;
-    font-size: 14px;
+	font-size: 14px;
 }
 
 a:hover {
@@ -47,6 +47,12 @@ a:focus{outline:none;}
 }
 .autoMenu ul>li>a{
 	color: #399c9c;
+	width:180px;
+	display:block;
+	overflow:hidden;
+	word-break:keep-all;
+	white-space:nowrap;
+	text-overflow:ellipsis;
 }
 .autoMenu ul>li.active>a{
 	color: #ff5370;
