--- a/src/components/List/style/index.less
+++ b/src/components/List/style/index.less
@@ -27,7 +27,9 @@
             }
         };
         .ant-card-body {
-          padding:25px;
+          padding:5px 10px 5px 10px;
+          font-size:12px;
+          height: 50px;
         }
       }
       .ant-card-actions {
